styles.css
/* CSS Document */
body, html {
  height: 100%;
  margin: 0;
  font-family: Arial, sans-serif;
}

.slideshow-container {
  position: relative;
  background: #000;
  height: 100vh;
}

.mySlides {
  display: none;
  height: 100vh;
  background-size: cover;
  background-position: center;
}

img {
  vertical-align: middle;
  height: 100vh;
  width: 100%-;
  object-fit: cover; /* Keep aspect ratio but cover entire area */
}

.text {
  color: white;
  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
  font-size: 1.3em; /* original size for larger screens */
  position: absolute;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
	width: 80%;
  text-align: center;
	padding: 10px;
	
   background-color: rgba(0, 0, 0, 0.2); /* Adjust opacity as needed */
   border-radius: 5px;
	
}

/* Media query for screens less than 768px wide */
@media (max-width: 768px) {
     .text h1 {
        font-size: 2em; /* larger font size for mobile devices */
    }
    .text p {
        font-size: 1.5em; /* increased font size for paragraphs on mobile */
		left: 10%;	
		width: 80%;
		padding: 10px;
    }
}


.contact-form {
  position: fixed;
  bottom: 0;
  left: 50%;  /* Position the left edge of the form at the middle of the screen */
  transform: translateX(-50%); /* Move the form left by half its own width to center it */
  background: rgba(0, 0, 0, 0.8);
  color: white;
  width: 80%;
  padding: 20px;
  box-sizing: border-box;
  border-radius: 5px;
}

input, textarea {
  width: 100%;
  padding: 12px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #000;
  box-sizing: border-box;
  background-color: #252424;
}

button {
  width: 100%;
  background-color: #22A3ED;
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  cursor: pointer;
}

button:hover {
  opacity: 0.8;
}

